--- a/Assignments/NDH802-Assignment3-students.Rmd
+++ b/Assignments/NDH802-Assignment3-students.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "NDH802 - Assignment 3"
 author: "Group no. "
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
@@ -29,11 +29,11 @@ Set your working directory
 #setwd("")
 ```
 
-Run this code chunk to load data into your R Environment. [Fill in your group number next to `our_group_number =`. For example, if you are group 3, make it `our_group_number = 3`]{.ul}. Hereby each and every group should have a unique `sample` for questions 1 and a unique `df` for question 2 and 3. Accordingly, your results should be different from other groups' and you should not be comparing them.\
+Run this code chunk to load data into your R Environment. [Fill in your group number]{.ul} next to `our_group_number =`. For example, if you are group 3, make it `our_group_number = 3`. Hereby each and every group should have a unique `sample` for questions 1 and a unique `df` for question 2 and 3. Accordingly, your results should be different from other groups' and you should not be comparing them.\
 *Note*. If you fill in the wrong group, your assignment will **not** be graded.
 
 ```{r}
-our_group_number = 10
+our_group_number = 16
 
 inference_dataset <- read.csv("https://cda.hhs.se/inference_dataset.csv")
 set.seed(our_group_number); df <- inference_dataset[sample(1:nrow(inference_dataset),
@@ -54,57 +54,60 @@ The maximum score for the course NDH802 exam is 70. Out of curiosity, you talk t
 
 (a) Based on your `sample`, what is the 90% confidence interval (CI) for the population mean? (0.5p) How would you interpret the 90% CI, in general and in this case? (0.5p)
 
-(b) Your `sample` stay unchanged. What are the 90% CIs for the population mean in the following 2 cases? (0.5p)
+(b) You find an (imaginary) report that says the exam scores are normally distributed with the standard deviation of 12. With this new information, what is the 90% CI for the population mean? (0.5p) Is this CI different from the one you got from (a)? Why/why not? (0.5p)
 
--   *Case 1*: the total number of students who have ever taken NDH802 exam is 1,000
+(c) If you knew the grades of all the students who have ever taken the NDH802 exams, would 90% of the (population) grades fall into the CI you found in (b)? Why/why not? (1p)
 
--   *Case 2*: the total number of students who have ever taken NDH802 exam is 10,000
-
-    Is this CI different from the one you got from (a)? Why/why not? (0.5p)
-
-(c) You find an (imaginary) report that says the exam scores are normally distributed with the standard deviation of 12. With this new information, what is the 90% CI for the population mean? (0.5p) Is this CI different from the one you got from (a)? Why/why not? (0.5p)
-
-(d) Assume that you want to increase the confidence level to 99%, but you do not want the CI to be wider, i.e., you want the same CI that you found in (c). What would you do? Justify your answer with empirical evidence(s). For example, if you propose to adjust something, please indicate why and by/to how much. (1p)
+(d) Assume that you want to increase the confidence level to 99%, but you do not want the CI to be wider, i.e., you want the same CI that you found in (b). What would you do? Justify your answer with empirical evidence(s). For example, if you propose to adjust something, please indicate why and by/to how much. (1p)
 
 *Note*: All assumptions in this question are hypothetical.
 
 ### Question 2. Hypothesis testing
 
-(a) Imagine you are the customer relationship manager. One of your colleagues argues that **the average `value` of the customers is 4150**. Do you reject this claim at 95% confidence level based on your sample data `df`? Justify your answer. (1p)
-(b) Now you want to investigate only the customers who return more than 30 items. Your colleague argues that **their average `value` is less than 40000**. Do you reject this claim at 95% confidence level based on your sample data (i.e., `df`)? Justify your answer. (1p)
-(c) Consider these two groups of customers:
+Q2a, c and d: In order to get full score, you need to formulate the null and alternative hypotheses, perform the tests and explain your results in details. Code without motivations will not be graded.
 
--   *Group 1*: Loyal customers whose points are lower than 6500
--   *Group 2*: Not loyal customers whose points are higher than 1000
+(a) Imagine you are the customer relationship manager. One of your colleagues argues that the average `value` of the customers is 4129. Based on your sample data `df`, do you reject this claim at 95% confidence level? (1p)
 
-Which group is more valuable (based on their `value`)?\
-Perform the test at 99% confidence level (1p) and justify your choice (1p).
+(b) Your colleague understand that p-value is the probability that the null hypothesis is true, given your sample mean of `value` \footnote{what you computed in Q1c, Assignment 1}? Formally, s/he thinks that $p-value = P(H_0 \text{ is true} \mid \text{sample mean})$. Do you agree/disagree? Why? (1p)
+
+(c) Your colleague now proposes that the probability of loyal customers who has never shop offline is 23%. You think it should be higher. Perform the hypothesis testing and with the confidence level of your choice. Explain why you choose that confidence level and the results. (1p)
+
+(d) Consider these two groups of customers:
+
+    *Group 1*: Loyal customers whose points are lower than 6500
+
+    *Group 2*: Not loyal customers whose points are higher than 1000
+
+    Which group is more valuable (based on their `value`)? Note that we would like to generalize this finding to the whole customer base (the population) and not only the observations in your sample `df`. Therefore, computing and comparing the means with our eyes is not substantial. (1p)
+
+\newpage
 
 ### Question 3. Correlation and regression
 
-(a) Your objective for 2021 is to increase the customer `value`. In order to do that, you first aim to understand which factors (variables) are the most influential. Write your own linear regression equation (modify the one below), perform the estimation, print out the model estimation. $$ value = \beta_0 + \beta_1var_1 + \ldots + \beta_nvar_n + \epsilon $$ You are free to include any variables in `df` as your dependent variables. `channeltype` is categorical variable, which is a little more difficult to work with (1p)
+(a) Your objective for 2021 is to increase the customer `value`. In order to do that, you first aim to understand which factors (independent variables - IVs) are the most influential. Write your own linear regression equation (modify the one below), explain your choice of IVs \footnote{You are free to include any variables in `df` as your IVs}, perform the estimation, print out the model estimation.
+$$ value = \beta_0 + \beta_1var_1 + \ldots + \beta_nvar_n + \varepsilon $$
+*Heads up:*
 
-(b) You need to explain the results from (a) to your boss who has not taken the course "Data analytics". How would you do that? (1p)
+-   `channeltype` is categorical variable, which is a little more difficult to work with.
+-   The more IVs do not not always guarantee the better model.
 
-(c) Imagine you have three new customers:
+(b) Interpret the results, in both statistical and business language. (0.5p)  
+Discuss a strategic plan to increase customer `value` based on your model. (0.5p)
+
+(c) Imagine you have three new customers. Based on your linear regression model, which customer (choose one) do you think is the most valuable and why? (1p)
 
 ```{r, echo=FALSE}
 read.csv("https://bit.ly/30tIXfp")[,-1]
 ```
 
-Based on your linear regression model, which customer (choose one) do you think is the most valuable and why?(1p)
-
 (d) Looking at the figure below, your colleague suggests that you should give the customers more `points` to increase their `value`. What do you think? (1p)
-
 ```{r, echo=FALSE, fig.align='center', out.width="70%"}
 set.seed(802); toplot = df[sample(1:nrow(df), size = 100, replace = FALSE),]
 plot(toplot$points, toplot$value, col = "dimgray",
      xlim = c(0, 25000), ylim = c(0, 25000),
      xlab = "points", ylab = "value")
 ```
-
 *Note*: For illustration purpose, the plot only includes 100 customers. One little circle represents one customer.
-
 \vfill
 
 *Have fun and good luck!*\
