--- a/Spring 2022/Assignments/NDH802-Assignment1-students.Rmd
+++ b/Spring 2022/Assignments/NDH802-Assignment1-students.Rmd
@@ -33,28 +33,41 @@ our_group <- 27
 Run this code chunk to load data into your R Environment. The command will randomly select 1,000,000 rows of data from the original data set. Hereby each and every group should have a unique `df`. Accordingly, your results should be different from other groups' and you should not be comparing them.
 
 ```{r, echo=FALSE}
-inference_dataset <- read.csv("https://cda.hhs.se/inference_dataset.csv")
+inference_dataset <- read.csv("https://cda.hhs.se/NDH802data.csv")
 set.seed(our_group); df <- inference_dataset[sample(1:nrow(inference_dataset),
-                           size = 1000000, replace = FALSE), -1]
-rm(inference_dataset)
+                           size = 1000000,
+                           replace = FALSE), -1]; rm(inference_dataset)
 ```
 
 #### Data description
 
++-------------------+------------------------------------------------------------------------------------------------------------+
 | Variable          | Description                                                                                                |
-|-------------------|------------------------------------------------------------------------------------------------------------|
++===================+============================================================================================================+
 | cust.id           | Unique customer id                                                                                         |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | age               | Customer age in year 2021                                                                                  |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | email             | If there is an email of the customer in the system                                                         |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | member.since      | Year from which the customer become a member. They can only register at the physical stores.               |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | distance.to.store | Distance (in km) from customer's address to the physical store they register their membership              |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | store.trans       | Total number of offline transactions the customer made in year 2021                                        |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | store.spend       | Total amount (in SEK) the customer spend from offline transaction in year 2021                             |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | online.visits     | Total number of time the customer visit (does not necessarily mean purchase) the online store in year 2021 |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | online.trans      | Total number of online transactions the customer made in year 2021                                         |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | online.spend      | Total amount (in SEK) the customer spend from online transactions in year 2021                             |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | points            | Total loyalty points the customer accumulates since they become a member deducted by points they have used |
++-------------------+------------------------------------------------------------------------------------------------------------+
 | main.store        | The format in which the customer made the most transactions in year 2021                                   |
++-------------------+------------------------------------------------------------------------------------------------------------+
 
 \newpage
 
@@ -71,7 +84,7 @@ rm(inference_dataset)
 # )
 ```
 
-(c) Compute the mean and variance of `distance.to.store` of the customers whose `main.format` is supermarket and of the customers whose `main.format` is convenient store (1p). Comment on the difference between the means of the two groups; and the variances of the two groups (1p).
+(c) Compute the mean and variance of `distance.to.store` of the customers whose `main.format` is supermarket and of the customers whose `main.format` is convenient store (1p). Comment on the difference between the means of the two groups; and the difference between the variances of the two groups (1p).
 
 ### Question 2. Probability theory
 
@@ -89,7 +102,7 @@ Consider the following events:
 
 (d) Are $A$ and $B$ independent events? Why/why not? (1p)
 
-(e) Compare and explain (with formula) the similarities/difference among $P(B)$, $P(B \cap A)$ and $P(B \mid A)$ (2p).
+(e) Compare and explain (with formula) the similarities/differences among $P(B)$, $P(B \cap A)$ and $P(B \mid A)$ (2p).
 
 \vfill
 
