--- a/Spring 2022/Assignments/NDH802-Assignment3-students.Rmd
+++ b/Spring 2022/Assignments/NDH802-Assignment3-students.Rmd
@@ -12,7 +12,6 @@ rm(list=ls())
 ------------------------------------------------------------------------
 
 -   The assignment includes 3 questions, 4 points each.
--   Question 1 is based on `sample`. Question 2 and 3 are based on `df`.
 -   Your submission should be an RMarkdown file with your solutions in words and/or R code. If you handwrite parts of your assignment, insert it as an image near the corresponding question(s). Name the files NDH802_Assignment1_GroupNumber.
 -   You should work in groups and contribute equally.
 -   You can copy my code, but make sure you understand it.
@@ -30,22 +29,22 @@ Set your working directory and fill in your group number. For example, if you ar
 our_group <- 27
 ```
 
-Run this code chunk to load data into your R Environment. The command will randomly select 1,000,000 rows of data from the original data set. Hereby each and every group should have a unique `df`. Accordingly, your results should be different from other groups' and you should not be comparing them.
+Run this code chunk to load data, namely `df`, `sample_A` and `sample_B` into your R Environment. Refer to Assignment 1 for data description.
 
 ```{r}
-inference_dataset <- read.csv("https://cda.hhs.se/inference_dataset.csv")
-set.seed(our_group_number); df <- inference_dataset[sample(1:nrow(inference_dataset),
+inference_dataset <- read.csv("https://cda.hhs.se/NDH802data.csv")
+set.seed(our_group); df <- inference_dataset[sample(1:nrow(inference_dataset),
                            size = 1000000,
                            replace = FALSE), -1]; rm(inference_dataset)
-sample_A = sample(cust.df$online.spend/cust.df$online.trans, 25)
-sample_B = sample(cust.df$online.spend/cust.df$online.trans, 2500)
+sample_A = sample(df$online.spend/df$online.trans, 25)
+sample_B = sample(df$online.spend/df$online.trans, 2500)
 ```
 
 \newpage
 
 ### Question 1. Sampling theory and confidence intervals
 
-To investigate the average value of online baskets, you sample some online baskets from the population. Assume the population follows normal distribution. `sample_A` contains the average online baskets values of 25 customers and `sample_B` contains the average online baskets values of 2500 customers.
+To investigate the average value of online baskets, you sample some online baskets from the population. Assume the *true* average value of online baskets follows normal distribution. `sample_A` contains the average online baskets values of 25 customers and `sample_B` contains the average online baskets values of 2500 customers.
 
 ```{r}
 #sample
@@ -64,20 +63,8 @@ To investigate the average value of online baskets, you sample some online baske
 In order to get full score for this question, you need to formulate the null and alternative hypotheses, perform the tests at the significance level of your choice and explain your results in details. Note that we would like to generalize the finding to the whole customer base (the population) and not only the observations in your sample `df`. Therefore, computing and comparing the means with our eyes is not substantial. Code without motivations will not be graded.
 
 (a) Imagine you are the customer relationship manager. One of your colleagues argues that the average `store.spend` of the customers is 58080. Based on your sample data `df`, would you reject this claim at 95% confidence level? (1p)
-
-```{=html}
-<!-- -->
-```
 (b) Suppose you want to know if there is strong evidence that the average `store.spend` is higher than the average `online.spend`. How would you test it and what would you conclude? (1p)
-
 (c) Suppose you want to know if there is strong evidence that the customers whose `main.format` is offline live nearer to the store as compared with the customers whose `main.format` is online. How would you test it and what would you conclude? (1p)
-
-    ```{r}
-    off = cust.df[cust.df$main.format != "Online", "total.spend"]
-    on = cust.df[cust.df$main.format == "Online", "total.spend"]
-    t.test(off, on)
-    ```
-
 (d) What is Type I error in general and in the test you perform in (b)? What can we do to reduce Type I and what are the consequences? (1p)
 
 \newpage
@@ -94,11 +81,11 @@ In order to get full score for this question, you need to formulate the null and
 
 (c) Imagine you have three new customers. Based on your linear regression model, which customer (choose one) do you think will have highest `total.spend` and why? (1p)
 
-(d) What is the key underlying assumption of linear regression model? When is linear regression model useful and when is it not? (1p)
+    ```{r, echo=FALSE}
+    read.csv("https://raw.githubusercontent.com/lanhuongnguyen276/NDH802/master/Spring%202022/Assignments/NDH802_new_data.csv")[,-1]
+    ```
 
-```{r, echo=FALSE}
-read.csv("https://bit.ly/30tIXfp")[,-1]
-```
+(d) What is the key underlying assumption of linear regression model? When is linear regression model useful and when is it not? (1p)
 
 \vfill
 
